Fixed shift in URDF Viewer.

--- a/javascript/example/styles.css
+++ b/javascript/example/styles.css
@@ -1,9 +1,19 @@
-html, body, urdf-viewer {
+html, body {
     padding: 0;
     margin: 0;
     height: 100%;
     width: 100%;
     overflow: hidden;
+}
+
+urdf-viewer {
+    position: absolute;
+    padding: 0;
+    margin: 0;
+    height: 100%;
+    width: 100%;
+    overflow: hidden;
+    z-index: -1;
 }
 
 body {
